# lewtoff

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  justfile
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-02-phase-0-1-bootstrap-and-bitpacker.md  2026-05-02-phase-2-forward-mdct.md  2026-05-02-phase-3-codebooks.md  2026-05-02-phase-4-floor1.md  2026-05-02-phase-5-psymodel.md  2026-05-02-phase-6-residue.md  2026-05-02-phase-7-headers.md  2026-05-02-phase-8-ogg-framing.md  2026-05-02-phase-9a-pipeline-wiring.md  2026-05-02-phase-9b-parity.md  2026-05-02-phase-9c-short-blocks.md
src/: bitpack.rs  codebook.rs  debug_dump.rs  drft.rs  encode.rs  envelope.rs  floor1.rs  headers.rs  lib.rs  lpc.rs  mapping0.rs  mdct.rs  ogg_pages.rs  psy.rs  residue.rs  setup.rs  setup_blob.rs  window.rs
src/tables/: drft.rs  lookup.rs  masking.rs  mod.rs  trig.rs  window.rs
tests/: codebook.rs  corpus_sweep.rs  csibe_parity.rs  dump_corpus.rs  encode_smoke.rs  headers.rs  mdct.rs  ogg_headers.rs  parity.rs  psy.rs
tools/debug-diff/: Cargo.toml
tools/debug-diff/src/: main.rs
tools/debug-libvorbis-dump/: corpus_harness.c  harness  harness.c
tools/debug-rust-dump/: Cargo.toml
tools/gen-header-vectors/: Cargo.toml
tools/gen-setup-blob/: Cargo.toml
tools/gen-tables/: Cargo.toml
tools/gen-vectors-mdct/: harness.c
tools/lewtoff-cli/: Cargo.toml
tools/oracle-encoder/: build.sh  dump_drft_tables  dump_drft_tables.c  dump_window_tables.c  main.c  oracle-encoder
tools/parity-diff/: Cargo.toml
(+40 files in other folders)
