[workspace]
members = [".", "tools/gen-tables", "tools/gen-setup-blob", "tools/gen-header-vectors", "tools/parity-diff", "tools/debug-rust-dump", "tools/debug-diff"]

[package]
name = "lewtoff"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "Pure-Rust Ogg Vorbis encoder, byte-identical to libvorbis Q5."
repository = "https://github.com/opera-emoller/lewtoff"
categories = ["multimedia::audio", "encoding"]
keywords = ["vorbis", "ogg", "audio", "encoder", "lossy"]

[features]
default = []
# Enables the parity tests under tests/parity.rs. Requires `ffmpeg` on PATH
# with libvorbis 1.3.7. Off by default so contributors without ffmpeg can
# still run the bulk of the suite locally.
oracle = []

[dependencies]
ogg = "0.9"

[dev-dependencies]
lewton = "0.10"

[profile.release]
debug = "line-tables-only"

[lints.rust]
unsafe_code = "forbid"
